Add responsive design to cards

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
                                     &nbsp;
                                 </div>
                                 <h4 class="card__heading">
-                                    <span class="card__heading-span card__heading-span--2">Alp meadows</span>
+                                    <span class="card__heading-span card__heading-span--2">Alpine meadows</span>
                                 </h4>
                                 <div class="card__details">
                                     <ul>
@@ -199,7 +199,7 @@
                                 </h4>
                                 <div class="card__details">
                                 <ul>
-                                    <li>Region: Georgia, Kaukazian Mountains</li>
+                                    <li>Region: Georgia, Caucasus Mountains</li>
                                     <li>2 tour guides</li>
                                     <li>Sleep in tents</li>
                                     <li>Difficulty: high</li>
